--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://jahongiirnurmamatov:2260122ujf@cluster0.skxmawi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_KEY = sadqwjcojoiqaujei123js
+asdsad
